[package]
name = "kv"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
prost = "0.8"
tracing = "0.1"
thiserror = "1.0.22"
dashmap = "4.0.2"
axum = "0.2"

[dev-dependencies]
anyhow = "1"
async-prost = "0.2.1"
futures = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "macros", "net"]}
tracing-subscriber = "0.2.17"


[build-dependencies]
prost-build = "0.8"
